...
class TaskListScreen extends StatelessWidget {
  const TaskListScreen({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Daftar Tugas')),
      body: Consumer<TaskController>(
        builder: (context, state, _) {
          final position = state.currentPosition;
          return ListView.separated(
            padding: const EdgeInsets.all(16),
            itemCount: tasks.length + 1,
...
